# quantum-ml-comparator

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDABOT-RULEBOOK.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot-merge.yml  dependabot-validate.yml  dependency-review.yml  lint.yml  release.yml  test.yml
benchmarks/: README.md  protein_ligand_binding_220k.parquet
examples/: 01_quickstart.py  02_recommender.py  03_molecule_vqe.py  04_custom_dataset.py  05_protein_ligand_binding.py  reproduce_anselmetti_h2.py
examples/figures/: h2_dissociation.csv
qmc/: __init__.py  _validation.py  benchmark.py  recommender.py
qmc/circuits/: __init__.py  kernels.py  qnp.py  sklearn_api.py  templates.py  vqc.py
qmc/classical/: __init__.py  models.py
qmc/dashboard/: __init__.py  server.py
qmc/datasets/: __init__.py  builtin.py
qmc/evaluation/: __init__.py  metrics.py  plots.py
qmc/molecules/: __init__.py  library.py  vqe.py
tests/: test_benchmark.py  test_circuits.py  test_feature_channel_benchmark.py  test_recommender.py  test_reproductions.py  test_sklearn_compat.py  test_smoke.py  test_validation.py
