[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-ml-comparator"
version = "0.1.0"
description = "Compare quantum ML algorithms against classical ML — with automatic QML recommendations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Aniruddh Goteti"},
]
keywords = ["quantum", "machine-learning", "pennylane", "benchmark", "qml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pennylane>=0.35",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
molecules = ["pyscf>=2.4"]
dev = ["pytest>=7.0", "pytest-cov"]
all = ["pyscf>=2.4", "pytest>=7.0", "pytest-cov"]

[project.urls]
Repository = "https://github.com/aniruddhgoteti/quantum-ml-comparator"

[tool.setuptools.packages.find]
include = ["qmc*"]
