[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-ml-comparator"
version = "0.1.0"
description = "Compare quantum ML algorithms against classical ML — with automatic QML recommendations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Aniruddh Goteti", email = "aniruddh.goteti@orbion.life"},
]
maintainers = [
    {name = "Aniruddh Goteti", email = "aniruddh.goteti@orbion.life"},
]
keywords = ["quantum", "machine-learning", "pennylane", "benchmark", "qml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "pennylane>=0.35",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
molecules = ["pyscf>=2.4"]
dev = ["pytest>=7.0", "pytest-cov", "mypy>=1.8", "ruff>=0.4"]
all = ["pyscf>=2.4", "pytest>=7.0", "pytest-cov", "mypy>=1.8", "ruff>=0.4"]

[project.urls]
Homepage = "https://orbion.life"
Repository = "https://github.com/orbion-life/quantum-ml-comparator"
Issues = "https://github.com/orbion-life/quantum-ml-comparator/issues"
Changelog = "https://github.com/orbion-life/quantum-ml-comparator/blob/main/CHANGELOG.md"
Documentation = "https://orbion-life.github.io/quantum-ml-comparator/"

[tool.setuptools.packages.find]
include = ["qmc*"]

[tool.setuptools.package-data]
qmc = ["py.typed"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
follow_imports = "silent"
disallow_untyped_defs = false  # progressive adoption; tighten per-module over time

[[tool.mypy.overrides]]
# Fully typed modules — enforce strict type checking here.
# More modules get promoted into this list as they gain complete hints
# (see CONTRIBUTING.md "Code standards").
module = [
    "qmc.recommender",
]
disallow_untyped_defs = true

[tool.coverage.run]
source = ["qmc"]
branch = true
omit = [
    "qmc/dashboard/*",  # HTTP server glue, exercised via integration
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-ra --strict-markers"
